# ATW-Client

./: .gitignore  AGENTS.md  ARCHITECTURE_PLAN.md  ARCHITECTURE_TODO.md  CMakeLists.txt  MODS.md  PORTABILITY_TODO.md  PROJECT_SETUP.md  README.md  config.json  res.qrc
cmake/: patch_lunar_branding.cmake
docs/: current-architecture.md  portable-java-performance.md
res/: atw-config.rc  atw-launch.rc
scripts/: create_atw_test_bundle.ps1
src/: main.cpp
src/apps/: config_main.cpp  launch_main.cpp
src/config/: config.cpp  config.h
src/core/: README.md
src/core/agents/: javaagents.cpp  javaagents.h
src/core/mods/: weavemods.cpp  weavemods.h
src/gui/: mainwindow.cpp  mainwindow.h
src/gui/agents/: agentsmodel.cpp  agentsmodel.h
src/gui/mods/: modsmodel.cpp
src/gui/pages/: configurationpage.h  gamepage.cpp  gamepage.h  helperspage.cpp  logspage.cpp  logspage.h  modificationspage.cpp  modificationspage.h  modspage.cpp  modspage.h  otherpage.cpp  otherpage.h  packspage.cpp  packspage.h
src/gui/widgets/: customtabbar.cpp  customtabbar.h  customtabwidget.cpp  customtabwidget.h  customtitlebar.cpp  customtitlebar.h  filechooser.cpp  filechooser.h
src/launch/: offlinelauncher.cpp  offlinelauncher.h
src/util/: fs.cpp  fs.h  utils.cpp
weave-mods/atw-levelhead/: README.md
weave-mods/atw-levelhead/src/main/java/com/atw/levelhead/: ATWLevelHead.java
weave-mods/atw-levelhead/src/main/java/com/atw/levelhead/command/: LevelHeadCommand.java
weave-mods/atw-levelhead/src/main/java/com/atw/levelhead/data/: HypixelBedwarsProvider.java  HypixelContextDetector.java
weave-mods/atw-levelhead/src/main/java/com/atw/levelhead/render/: TabListFormatter.java
weave-mods/atw-rebrand/: build.gradle.kts  gradle.properties  settings.gradle.kts
weave-mods/atw-rebrand/src/main/java/com/atw/rebrand/: ATWRebrand.java
weave-mods/atw-rebrand/src/main/java/com/atw/rebrand/hook/: LunarLogoResourceHook.java  MenuLogoOverlayHook.java
weave-mods/atw-rebrand/src/main/java/com/atw/rebrand/render/: MenuLogoOverlay.java
weave-mods/atw-rebrand/src/main/resources/: weave.mod.json
weave-mods/optimal-zone/: AGENTS.md  MINIMAP_OPTIMIZATION_BACKLOG.md  README.md  build.gradle.kts  settings.gradle.kts
weave-mods/optimal-zone/src/main/java/com/atw/optimalzone/: OptimalZoneMod.java  OverlayPlayerClassifier.java
weave-mods/optimal-zone/src/main/java/com/atw/optimalzone/command/: OverlayCommand.java  ToggleOptimalZoneCommand.java
weave-mods/optimal-zone/src/main/java/com/atw/optimalzone/render/: InvisOverlayRenderer.java  MinimapTerrainManager.java  OccludedPlayerRenderer.java  OptimalZoneRenderer.java  OverlayColorResolver.java  PlayerMinimapRenderer.java  ProjectileTrajectoryRenderer.java
weave-mods/optimal-zone/src/main/resources/: weave.mod.json
weave-mods/runtime/: README.md
